# rppal

./: .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  rust.yml
examples/: README.md  gpio_blinkled.rs  gpio_blinkled_signals.rs  gpio_multithreaded_mpsc.rs  gpio_multithreaded_mutex.rs  gpio_servo_softpwm.rs  gpio_shared_button_state.rs  gpio_status.rs  i2c_ds3231.rs  pwm_blinkled.rs  pwm_servo.rs  spi_24aa1024.rs  spi_25aa1024.rs  uart_blocking_read.rs
src/: gpio.rs  hal.rs  i2c.rs  ioctl.rs  lib.rs  linux.rs  macros.rs  pwm.rs  spi.rs  system.rs  uart.rs  user.rs
src/gpio/: cdev_interrupt.rs  epoll.rs  gpiomem.rs  hal.rs  hal_unproven.rs  interrupt.rs  ioctl.rs  mem.rs  mod.rs  pin.rs  soft_pwm.rs  sysfs.rs
src/gpio/gpiomem/: bcm.rs  rp1.rs
src/gpio/ioctl/: v1.rs  v2.rs
src/i2c/: hal.rs  ioctl.rs  mod.rs
src/ioctl/: i2c.rs  mod.rs  spi.rs
src/pwm/: hal.rs  hal_unproven.rs  mod.rs  sysfs.rs
src/spi/: hal.rs  ioctl.rs  mod.rs  segment.rs  transfer_segment.rs
src/uart/: hal.rs  mod.rs  termios.rs
