[package]
name = "rppal"
version = "0.11.3" # Also update html_root_url in lib.rs
edition = "2018"
authors = ["Rene van der Meer <rene@golemparts.com>"]
description = "Interface for the Raspberry Pi's GPIO, I2C, PWM, SPI and UART peripherals."
documentation = "https://docs.golemparts.com/rppal"
repository = "https://github.com/golemparts/rppal"
readme = "README.md"
license = "MIT"
categories = ["embedded", "hardware-support"]
keywords = ["raspberry", "pi", "embedded-hal", "embedded-hal-impl", "hal"]

[dependencies]
libc = "0.2.50"
lazy_static = "1.3.0"
nb = { version = "0.1.1", optional = true }
embedded-hal = { version = "0.2.2", optional = true }
void = { version = "1.0.2", optional = true }

[dev-dependencies]
simple-signal = "1.1.1"

[features]
default = []
hal = ["nb", "void", "embedded-hal"]
hal-unproven = ["nb", "embedded-hal/unproven", "hal"]
