[package]
name = "rppal"
# Also update html_root_url in lib.rs
version = "0.17.1"
edition = "2021"
rust-version = "1.60"
authors = ["Rene van der Meer <rene@golemparts.com>"]
description = "Interface for the Raspberry Pi's GPIO, I2C, PWM, SPI and UART peripherals."
documentation = "https://docs.golemparts.com/rppal"
repository = "https://github.com/golemparts/rppal"
readme = "README.md"
license = "MIT"
categories = ["embedded", "hardware-support"]
keywords = ["raspberry", "pi", "embedded-hal", "embedded-hal-impl", "hal"]

[dependencies]
libc = "0.2"
nb = { version = "0.1.3", optional = true }
embedded-hal-0 = { version = "0.2.7", optional = true, package = "embedded-hal" }
embedded-hal = { version = "1", optional = true }
embedded-hal-nb = { version = "1", optional = true }
void = { version = "1.0.2", optional = true }
spin_sleep = { version = "1.0.0", optional = true }

[dev-dependencies]
simple-signal = "1.1.1"

[features]
default = []
embedded-hal-0 = ["dep:embedded-hal-0", "dep:void", "embedded-hal-nb", "nb"]
embedded-hal = ["dep:embedded-hal", "dep:spin_sleep"]
embedded-hal-nb = ["dep:embedded-hal-nb", "embedded-hal"]
hal = ["embedded-hal-0", "embedded-hal", "embedded-hal-nb"]
hal-unproven = ["embedded-hal-0/unproven", "hal"]
